--- a/main/styles/main.scss
+++ b/main/styles/main.scss
@@ -1,5 +1,11 @@
+$bgc-color:#937DC2;
+$secBgc-color:#E8A0BF;
+$content-color:#FCC5C0;
+$fill-color:#C689C6;
+
 *
 {
+    color:white;
     border:0;
     margin:0;
     box-sizing: border-box;
