--- a/main/styles/main.scss
+++ b/main/styles/main.scss
@@ -10,3 +10,140 @@ $fill-color:#C689C6;
     margin:0;
     box-sizing: border-box;
 }
+
+.container
+{
+    width:100%;
+    height:150vh;
+    display:flex;
+    flex-wrap: wrap;
+    background-color: $bgc-color;
+    &__header
+    {
+        height:200px;
+        flex-basis: 100%;
+        display:flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+
+        &__logo
+        {
+            flex-basis: 20%;
+            display:flex;
+            justify-content: center;
+        }
+        
+        &__menu
+        {
+            flex-basis:50%;
+            margin-right:20%;
+            
+            &__list
+            {
+                list-style: none;
+                text-decoration: none;
+                height:100%;
+                width:100%;
+                display:flex;
+                justify-content: space-around;
+                align-items: center;
+                
+                &__element
+                {
+                    display:block;
+                    font-size:2em;
+
+                    &__link
+                    {
+                        text-decoration: none;
+                    }
+                }
+            }
+        }
+    }
+
+    &__footer
+    {
+    width:100%;
+    flex:1;
+    
+    display:flex;
+    justify-content: flex-end;
+
+    &__media
+    {
+        flex-basis: 75%;
+        display:flex;
+        justify-content: center;
+        align-items: center;
+        & a
+        {
+            margin:2.5em;
+        }
+        &__logo
+        {
+            width:90px;
+        }
+    }
+
+    &__copyright
+        {
+        flex-basis:10%;
+        display:flex;
+        justify-content: flex-end;
+        align-items: flex-end;
+        margin-right:1em;
+        }
+    }
+
+    &__wave
+    {
+        flex-basis: 100%;
+        position: relative;
+        background-color: $secBgc-color;
+    }
+
+
+}
+
+.waveTop  {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+    & svg
+    {
+        position: relative;
+        display: block;
+        width: calc(144% + 1.3px);
+        height: 200px;
+    }
+    & .shape-fill
+    {
+        fill: $bgc-color;
+    }
+
+}
+
+.waveBottom {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+    transform: rotate(180deg);
+
+    & svg {
+        position: relative;
+        display: block;
+        width: calc(110% + 1.3px);
+        height: 76px;
+    }
+
+    & .shape-fill {
+        fill: $bgc-color;
+    }
+}
