--- a/main/styles/template.css
+++ b/main/styles/template.css
@@ -6,7 +6,6 @@
 }
 
 .container {
-  width: 100%;
   height: 150vh;
   display: flex;
   flex-wrap: wrap;
@@ -45,8 +44,7 @@
   text-decoration: none;
 }
 .container__footer {
-  width: 100%;
-  flex: 1;
+  flex-basis: 100%;
   display: flex;
   justify-content: flex-end;
 }
@@ -110,4 +108,10 @@
 }
 .waveBottom .shape-fill {
   fill: #937DC2;
-}/*# sourceMappingURL=main.css.map */
+}
+
+.container__wave {
+  flex-basis: 100%;
+  position: relative;
+  background-color: #E8A0BF;
+}/*# sourceMappingURL=template.css.map */
