--- a/main/styles/template.css
+++ b/main/styles/template.css
@@ -2,73 +2,129 @@
   color: white;
   border: 0;
   margin: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .container {
+  width: 100%;
   height: 150vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   background-color: #937DC2;
 }
+
 .container__header {
   height: 200px;
-  flex-basis: 100%;
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
+
 .container__header__logo {
-  flex-basis: 20%;
+  -ms-flex-preferred-size: 20%;
+      flex-basis: 20%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
+
 .container__header__menu {
-  flex-basis: 50%;
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
   margin-right: 20%;
 }
+
 .container__header__menu__list {
   list-style: none;
   text-decoration: none;
   height: 100%;
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-around;
-  align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
+
 .container__header__menu__list__element {
   display: block;
   font-size: 2em;
 }
+
 .container__header__menu__list__element__link {
   text-decoration: none;
 }
+
 .container__footer {
-  flex-basis: 100%;
+  width: 100%;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: flex-end;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
 }
+
 .container__footer__media {
-  flex-basis: 75%;
+  -ms-flex-preferred-size: 75%;
+      flex-basis: 75%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
+
 .container__footer__media a {
   margin: 2.5em;
 }
+
 .container__footer__media__logo {
   width: 90px;
 }
+
 .container__footer__copyright {
-  flex-basis: 10%;
+  -ms-flex-preferred-size: 10%;
+      flex-basis: 10%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
   margin-right: 1em;
 }
+
 .container__wave {
-  flex-basis: 100%;
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
   position: relative;
   background-color: #E8A0BF;
 }
@@ -81,12 +137,14 @@
   overflow: hidden;
   line-height: 0;
 }
+
 .waveTop svg {
   position: relative;
   display: block;
   width: calc(144% + 1.3px);
   height: 200px;
 }
+
 .waveTop .shape-fill {
   fill: #937DC2;
 }
@@ -98,20 +156,166 @@
   width: 100%;
   overflow: hidden;
   line-height: 0;
-  transform: rotate(180deg);
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
 }
+
 .waveBottom svg {
   position: relative;
   display: block;
   width: calc(110% + 1.3px);
   height: 76px;
 }
+
 .waveBottom .shape-fill {
   fill: #937DC2;
 }
 
 .container__wave {
-  flex-basis: 100%;
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
   position: relative;
   background-color: #E8A0BF;
-}/*# sourceMappingURL=template.css.map */
+}
+
+.container__musicHolder {
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
+  background-color: #E8A0BF;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.container__musicHolder__content {
+  height: 100%;
+  -ms-flex-preferred-size: 60%;
+      flex-basis: 60%;
+  background-color: #E8A0BF;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.container__musicHolder__content__holder {
+  margin: 2em;
+  position: relative;
+  width: 22vw;
+  height: 22vw;
+  border-radius: 50%;
+  background-color: #FCC5C0;
+}
+
+.container__musicHolder__content__holder__frame {
+  background-color: #E8A0BF;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  top: 7%;
+}
+
+.container__musicHolder__content__holder__frame__image {
+  border-radius: 50%;
+  width: 160px;
+  position: relative;
+  left: 10%;
+  top: 10%;
+}
+
+.container__musicHolder__content__holder__frame::before {
+  position: absolute;
+  top: -10%;
+  content: '';
+  width: 10px;
+  height: 120px;
+  background-color: #E8A0BF;
+}
+
+.container__musicHolder__content__holder__frame::after {
+  position: absolute;
+  bottom: -100%;
+  right: 0.5%;
+  content: '';
+  width: 10px;
+  height: 290px;
+  background-color: #E8A0BF;
+}
+
+.container__musicHolder__content__holder__title {
+  text-align: center;
+  width: 20vw;
+  position: absolute;
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  top: 55%;
+  font-size: 1.7em;
+}
+
+.container__musicHolder__content__holder__author {
+  text-align: center;
+  width: 17vw;
+  position: absolute;
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  top: 70%;
+  font-size: 1.5em;
+}
+
+.container__musicHolder__lyrics {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.container__musicHolder__lyrics__container {
+  overflow-y: scroll;
+  -ms-flex-preferred-size: 50%;
+      flex-basis: 50%;
+  height: 400px;
+  font-size: 2em;
+}
+
+.container__musicHolder__lyrics__container::-webkit-scrollbar {
+  width: 10px;
+}
+
+.container__musicHolder__lyrics__container::-webkit-scrollbar-track {
+  background: #E8A0BF;
+}
+
+.container__musicHolder__lyrics__container::-webkit-scrollbar-thumb {
+  background: #FCC5C0;
+  border-radius: 2em;
+}
+
+.container__musicHolder__lyrics__container::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+/*# sourceMappingURL=template.css.map */
