--- a/main/styles/template.scss
+++ b/main/styles/template.scss
@@ -7,4 +7,128 @@
         position: relative;
         background-color: $secBgc-color;
     }
+    &__musicHolder
+    {
+        flex-basis: 100%;
+        background-color: $secBgc-color;
+        display:flex;
+        justify-content: space-around;
+        &__content
+        {
+            height:100%;
+            flex-basis: 60%;
+            background-color: $secBgc-color;
+            display:flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: flex-end;
+    
+            &__holder
+            {
+                margin:2em;
+                position: relative;
+                width:22vw;
+                height:22vw;
+                border-radius: 50%;
+                background-color: $content-color;
+                &__frame{
+                    background-color: $secBgc-color;
+                    width:200px;
+                    height:200px;
+                    border-radius: 50%;
+                    position: absolute;
+                    margin-left:auto;
+                    margin-right:auto;
+                    left:0;
+                    right:0;
+                    top:7%;
+                    &__image
+                    {
+                        border-radius: 50%;
+                        width:160px;
+                        position: relative;
+                        left:10%;
+                        top:10%;
+    
+                    }
+                    &::before
+                    {
+                        position: absolute;
+                        top:-10%;
+                        content: '';
+                        width:10px;
+                        height:120px;
+                        background-color: $secBgc-color;
+                    }
+                    &::after
+                    {
+                        position: absolute;
+                        bottom:-100%;
+                        right:0.5%;
+                        content: '';
+                        width:10px;
+                        height:290px;
+                        background-color: $secBgc-color;
+                    }
+                    
+                }
+                &__title
+                {
+                    text-align: center;
+                    width:20vw;
+                    position: absolute;
+                    position: absolute;
+                    margin-left:auto;
+                    margin-right:auto;
+                    left:0;
+                    right:0;
+                    top:55%;
+                    font-size:1.7em;
+                }
+                &__author
+                {
+                    text-align: center;
+                    width:17vw;
+                    position: absolute;
+                    position: absolute;
+                    margin-left:auto;
+                    margin-right:auto;
+                    left:0;
+                    right:0;
+                    top:70%;
+                    font-size:1.5em;
+                }
+                
+            }
+        }
+        &__lyrics
+        {
+            display:flex;
+            justify-content: center;
+            align-items: center;
+
+            &__container
+            {
+                overflow-y: scroll;
+                flex-basis: 50%;
+                height:400px;
+                font-size:2em;
+                &::-webkit-scrollbar
+                {
+                    width:10px;
+                }
+                &::-webkit-scrollbar-track {
+                    background: $secBgc-color;
+                    
+                }
+                &::-webkit-scrollbar-thumb {
+                    background: $content-color;
+                    border-radius: 2em;
+                }
+                &::-webkit-scrollbar-thumb:hover {
+                    background: #555;
+                }
+            }
+        }
+    }
 }
