--- a/main/styles/template.css
+++ b/main/styles/template.css
@@ -260,7 +260,6 @@
   text-align: center;
   width: 20vw;
   position: absolute;
-  position: absolute;
   margin-left: auto;
   margin-right: auto;
   left: 0;
@@ -273,13 +272,25 @@
   text-align: center;
   width: 17vw;
   position: absolute;
-  position: absolute;
   margin-left: auto;
   margin-right: auto;
   left: 0;
   right: 0;
   top: 70%;
   font-size: 1.5em;
+}
+
+.container__musicHolder__content__holder > a {
+  font-size: 1em;
+  text-decoration: none;
+  text-align: center;
+  width: 13vw;
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  top: 80%;
 }
 
 .container__musicHolder__lyrics {
@@ -300,6 +311,8 @@
       flex-basis: 50%;
   height: 400px;
   font-size: 2em;
+  line-height: 140%;
+  text-align: justify;
 }
 
 .container__musicHolder__lyrics__container::-webkit-scrollbar {
