--- a/main/styles/template.scss
+++ b/main/styles/template.scss
@@ -77,7 +77,6 @@
                     text-align: center;
                     width:20vw;
                     position: absolute;
-                    position: absolute;
                     margin-left:auto;
                     margin-right:auto;
                     left:0;
@@ -90,13 +89,24 @@
                     text-align: center;
                     width:17vw;
                     position: absolute;
-                    position: absolute;
                     margin-left:auto;
                     margin-right:auto;
                     left:0;
                     right:0;
                     top:70%;
                     font-size:1.5em;
+                }
+                &>a{
+                    font-size:1em;
+                    text-decoration: none;
+                    text-align: center;
+                    width:13vw;
+                    position: absolute;
+                    margin-left:auto;
+                    margin-right:auto;
+                    left:0;
+                    right:0;
+                    top:80%;
                 }
                 
             }
@@ -113,6 +123,8 @@
                 flex-basis: 50%;
                 height:400px;
                 font-size:2em;
+                line-height: 140%;
+                text-align: justify;
                 &::-webkit-scrollbar
                 {
                     width:10px;
