--- a/main/styles/time_date.css
+++ b/main/styles/time_date.css
@@ -122,6 +122,13 @@
   margin-right: 1em;
 }
 
+@media (max-width: 600px) {
+  .container__footer__copyright {
+    -ms-flex-preferred-size: 20%;
+        flex-basis: 20%;
+  }
+}
+
 .container__wave {
   -ms-flex-preferred-size: 100%;
       flex-basis: 100%;
@@ -169,167 +176,6 @@
 
 .waveBottom .shape-fill {
   fill: #937DC2;
-}
-
-.container__wave {
-  -ms-flex-preferred-size: 100%;
-      flex-basis: 100%;
-  position: relative;
-  background-color: #E8A0BF;
-}
-
-.container__musicHolder {
-  -ms-flex-preferred-size: 100%;
-      flex-basis: 100%;
-  background-color: #E8A0BF;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-}
-
-.container__musicHolder__content {
-  height: 100%;
-  -ms-flex-preferred-size: 60%;
-      flex-basis: 60%;
-  background-color: #E8A0BF;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-}
-
-.container__musicHolder__content__holder {
-  margin: 2em;
-  position: relative;
-  width: 22vw;
-  height: 22vw;
-  border-radius: 50%;
-  background-color: #FCC5C0;
-}
-
-.container__musicHolder__content__holder__frame {
-  background-color: #E8A0BF;
-  width: 200px;
-  height: 200px;
-  border-radius: 50%;
-  position: absolute;
-  margin-left: auto;
-  margin-right: auto;
-  left: 0;
-  right: 0;
-  top: 7%;
-}
-
-.container__musicHolder__content__holder__frame__image {
-  border-radius: 50%;
-  width: 160px;
-  position: relative;
-  left: 10%;
-  top: 10%;
-}
-
-.container__musicHolder__content__holder__frame::before {
-  position: absolute;
-  top: -10%;
-  content: '';
-  width: 10px;
-  height: 120px;
-  background-color: #E8A0BF;
-}
-
-.container__musicHolder__content__holder__frame::after {
-  position: absolute;
-  bottom: -100%;
-  right: 0.5%;
-  content: '';
-  width: 10px;
-  height: 290px;
-  background-color: #E8A0BF;
-}
-
-.container__musicHolder__content__holder__title {
-  text-align: center;
-  width: 20vw;
-  position: absolute;
-  margin-left: auto;
-  margin-right: auto;
-  left: 0;
-  right: 0;
-  top: 55%;
-  font-size: 1.7em;
-}
-
-.container__musicHolder__content__holder__author {
-  text-align: center;
-  width: 17vw;
-  position: absolute;
-  margin-left: auto;
-  margin-right: auto;
-  left: 0;
-  right: 0;
-  top: 70%;
-  font-size: 1.5em;
-}
-
-.container__musicHolder__content__holder > a {
-  font-size: 1em;
-  text-decoration: none;
-  text-align: center;
-  width: 13vw;
-  position: absolute;
-  margin-left: auto;
-  margin-right: auto;
-  left: 0;
-  right: 0;
-  top: 80%;
-}
-
-.container__musicHolder__lyrics {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.container__musicHolder__lyrics__container {
-  overflow-y: scroll;
-  -ms-flex-preferred-size: 50%;
-      flex-basis: 50%;
-  height: 400px;
-  font-size: 2em;
-  line-height: 140%;
-  text-align: justify;
-}
-
-.container__musicHolder__lyrics__container::-webkit-scrollbar {
-  width: 10px;
-}
-
-.container__musicHolder__lyrics__container::-webkit-scrollbar-track {
-  background: #E8A0BF;
-}
-
-.container__musicHolder__lyrics__container::-webkit-scrollbar-thumb {
-  background: #FCC5C0;
-  border-radius: 2em;
-}
-
-.container__musicHolder__lyrics__container::-webkit-scrollbar-thumb:hover {
-  background: #555;
 }
 
 .container__timeHolder {
